--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,15 +1,16 @@
 {
+  "libVersion": "3.13.1",
+  "projectname": "daily-english-miniprogram",
   "setting": {
-    "compileHotReLoad": true,
-    "urlCheck": false,
+    "urlCheck": true,
     "coverView": true,
     "lazyloadPlaceholderEnable": false,
     "skylineRenderEnable": false,
     "preloadBackgroundData": false,
     "autoAudits": false,
-    "useApiHook": true,
-    "useApiHostProcess": true,
     "showShadowRootInWxmlPanel": true,
+    "compileHotReLoad": true,
+    "useApiHook": true,
     "useStaticServer": false,
     "useLanDebug": false,
     "showES6CompileOption": false,
@@ -18,8 +19,5 @@
     "bigPackageSizeSupport": false,
     "useIsolateContext": true
   },
-  "condition": {},
-  "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
-  "projectname": "SentenceNest",
-  "libVersion": "3.13.1"
+  "condition": {}
 }
